--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,19 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/img_1"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/img"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndoirdTeam33"
         tools:targetApi="31">
+        <activity
+            android:name=".mavzular.birinchMavzu.masala.TortinchiMasala1Activity"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".mavzular.birinchMavzu.masala.UchinchiMasala1Activity"
             android:exported="true">
