--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,14 @@
         android:theme="@style/Theme.AndoirdTeam33"
         tools:targetApi="31">
         <activity
-            android:name=".SakkizinchiMasala1Activity"
+            android:name=".mavzular.birinchMavzu.masala.SakkizinchiMasala1Activity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".YettinchiMasala1Activity"
+            android:name=".mavzular.birinchMavzu.masala.YettinchiMasala1Activity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
