--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.AndoirdTeam33"
         tools:targetApi="31">
         <activity
-            android:name=".OnikkinchiMasala1Activity"
+            android:name=".mavzular.birinchMavzu.masala.OnikkinchiMasala1Activity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
