--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,21 @@
         android:theme="@style/Theme.AndoirdTeam33"
         tools:targetApi="31">
         <activity
-            android:name=".YigirmanchiMasala1Activity"
+            android:name=".mavzular.ikkinchiMavzu.masala.BeshinchiMasala2Activity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".mavzular.ikkinchiMavzu.masala.TorTinchiMasala2Activity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".mavzular.birinchMavzu.masala.YigirmanchiMasala1Activity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
