--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,20 @@
         android:theme="@style/Theme.AndoirdTeam33"
         tools:targetApi="31">
         <activity
+            android:name=".YettinchiMasala2Activity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".mavzular.ikkinchiMavzu.masala.OltiNchiMasala2Activity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".mavzular.ikkinchiMavzu.masala.BeshinchiMasala2Activity"
             android:exported="false">
             <meta-data
@@ -22,6 +36,20 @@
         <activity
             android:name=".mavzular.ikkinchiMavzu.masala.TorTinchiMasala2Activity"
             android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".mavzular.ikkinchiMavzu.masala.UchinchiMasala2Activity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".mavzular.NewCalculator"
+            android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
