--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,35 +13,68 @@
         android:theme="@style/Theme.AndoirdTeam33"
         tools:targetApi="31">
         <activity
-            android:name=".OnBirinchiMasala2Activity"
+            android:name=".Svetafor_new_app_activity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Svetafor"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".OninchiMasala2Activity"
+            android:name=".OnUchinchiMasala2Activity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".ToqqizinchiMasala2Activity"
+            android:name=".mavzular.ikkinchiMavzu.masala.OnIkkinchiMasala2Activity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".SakkizinchiMasala2Activity"
+            android:name=".mavzular.ikkinchiMavzu.masala.OnBirinchiMasala2Activity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".YettinchiMasala2Activity"
+            android:name=".mavzular.ikkinchiMavzu.masala.OninchiMasala2Activity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".mavzular.ikkinchiMavzu.masala.ToqqizinchiMasala2Activity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".mavzular.ikkinchiMavzu.masala.SakkizinchiMasala2Activity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".mavzular.ikkinchiMavzu.masala.YettinchiMasala2Activity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -246,11 +279,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
             <meta-data
                 android:name="android.app.lib_name"
