--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,19 +7,41 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@drawable/img"
+        android:label="svetafor"
+        android:roundIcon="@drawable/game"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndoirdTeam33"
         tools:targetApi="31">
         <activity
-            android:name=".Svetafor_new_app_activity"
+            android:name=".CallinActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".CallActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Game_activity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Svetafor_new_app_activity"
+            android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -32,7 +54,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".OnUchinchiMasala2Activity"
+            android:name=".mavzular.ikkinchiMavzu.masala.OnUchinchiMasala2Activity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -279,8 +301,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
-
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
